[package]
name = "piston-guard"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = [
  "macros",
  "process",
  "rt",
  "time",
  "io-util",
  "io-std",
  "sync",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
